event updated and profiles changed

--- a/linux.html
+++ b/linux.html
@@ -122,8 +122,8 @@ padding: 20px;
       <h3 class="section-title">EVENT POSTER</h3>
       <span class="section-divider"></span>
       <div class="row">
-         <div href="img/Linux Workshop.jpeg" class="col-lg-12 about-img wow fadeInRight gallery-popup">
-        <img src="img/Linux Workshop.jpeg" alt="" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
+         <div href="img/linux101.jpeg" class="col-lg-12 about-img wow fadeInRight gallery-popup">
+        <img src="img/linux101.jpeg" alt="" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
     </div>
 
   <div class="container">
@@ -131,20 +131,23 @@ padding: 20px;
     <div class="section-description lightbg" style="text-align:left">
       <p style="text-align:center" >Greetings from Mixed Signals!💫</p>
       <p style="text-align:center">
-Mixed Signals is proud and excited to conduct a two day Linux workshop exclusively for EC students on Jan 16,17 2021 .Never miss this golden chance to build a foundation in Linux OS as, if you miss this, the regret is going to be real..</p>
+Mixed Signals is proud and excited to conduct a two day Linux workshop on october 18 2022 .Never miss this golden chance to build a foundation in Linux OS as, if you miss this, the regret is going to be real..</p>
           <ul style="text-align:center; list-style-type:none;">
             <li>
-                Date : Jan 16,17 2021 
+                Date : October 18, 2022
             </li>
             <li>
-            Time : 6:30 - 8.00 pm
+            Time : 4:30pm
             </li>
+            <li>
+              Venue CCF Hall
+          </li>
           </ul>
 
 
 
       <p class="section-description">
-        <a class="btn btn-primary" href="https://tinyurl.com/y6lbzy29" >
+        <a class="btn btn-primary" href="http://bit.ly/Linux_101" >
           REGISTER
           </a></p>
   </div>
