--- a/events.html
+++ b/events.html
@@ -95,14 +95,14 @@
 		   <div class="row">
          <div class="col-lg-4 col-md-6">
              <div class="box featured wow fadeInLeft">
-               <h3>Celeritas</h3>
+               <h3>Linux 101:</h3>
 
                <ul>
-                 <a href="celeritas.html" class="get-started-btn">
-                 <img src="img/Celeritas.png" alt=""></a>
+                 <a href="linux.html" class="get-started-btn">
+                 <img src="img/linux101.jpeg" alt=""></a>
                </ul>
-               <p><b>Registration: Closed</b></p>
-               <p><b> Event Date: 12/06/2021</b></p>
+               <p><b>Registration: Opened</b></p>
+               <p><b> Event Date: 18/10/2022</b></p>
               <!-- <a href="cadence.html" class="get-started-btn">Learn More</a> -->
              </div>
  			</div>
