event updated and profles changed

--- a/about-us.html
+++ b/about-us.html
@@ -180,7 +180,7 @@
 
     <!-- normal -->
      <div class="ih-item circle effect6 scale_up"><a href="#">
-        <br><div class="img"><img src="img/VishnuRaj_EC6A.jpg" alt="img"></div>
+        <br><div class="img"><img src="img/JESWIN PHOTO.jpg" alt="img"></div>
         <div class="info">
           <h3>Jeswin<br>Thomas</h3>
         </div></a></div>
