--- a/events.html
+++ b/events.html
@@ -95,9 +95,22 @@
 		   <div class="row">
          <div class="col-lg-4 col-md-6">
              <div class="box featured wow fadeInLeft">
-               <h3>Linux 101:</h3>
+               <h3>Introduction to Synopsys Programme</h3>
 
                <ul>
+                 <a href="synopsys.html" class="get-started-btn">
+                 <img src="img/synopsys.jpeg" alt=""></a>
+               </ul>
+               <p><b>Registration: Opened</b></p>
+               <p><b> Event Date: 20/10/22</b></p>
+               <p><b> Time:2:30pm</b></p>
+              <!-- <a href="cadence.html" class="get-started-btn">Learn More</a> -->
+             </div>
+ 			</div>
+         <div class="col-lg-4 col-md-6">
+             <div class="box featured wow fadeInLeft">
+               <h3>Learn with MEC</h3>
+ <ul>
                  <a href="linux.html" class="get-started-btn">
                  <img src="img/linux101.jpeg" alt=""></a>
                </ul>
@@ -106,6 +119,8 @@
               <!-- <a href="cadence.html" class="get-started-btn">Learn More</a> -->
              </div>
  			</div>
+      
+      
          <div class="col-lg-4 col-md-6">
              <div class="box featured wow fadeInLeft">
                <h3>Learn with MEC</h3>
@@ -118,6 +133,21 @@
               <!-- <a href="cadence.html" class="get-started-btn">Learn More</a> -->
              </div>
  			</div>
+       <div class="row">
+        <div class="col-lg-4 col-md-6">
+            <div class="box featured wow fadeInLeft">
+              <h3>Celeritas</h3>
+
+              <ul>
+                <a href="celeritas.html" class="get-started-btn">
+                <img src="img/Celeritas.png" alt=""></a>
+              </ul>
+              <p><b>Registration: closed</b></p>
+              <p><b> Event Date: 20/10/21</b></p>
+              <p><b> Time:2:30pm</b></p>
+             <!-- <a href="cadence.html" class="get-started-btn">Learn More</a> -->
+            </div>
+      </div>
          <div class="col-lg-4 col-md-6">
              <div class="box featured wow fadeInLeft">
                <h3>Workshop on Octave Software</h3>
